--- a/backend/FlowState/templates/index.html
+++ b/backend/FlowState/templates/index.html
@@ -13,7 +13,7 @@
     {% include 'navbar.html' %}
     <div class="container">
         {% include 'left_sidebar.html' %}
-        
+        {% block content %}
         <div class="main">
             <div class="main_container">
 
@@ -23,6 +23,7 @@
 
             </div>
         </div>
+        {% endblock %}
 
         {% include 'right_sidebar.html' %}
     
