--- a/frontend/templates/signup.html
+++ b/frontend/templates/signup.html
@@ -195,7 +195,7 @@ button{
         <input id="password" type="password" placeholder="Password" name="password" required >
         
         <label for="password">Re-enter Password</label>
-        <input type="password" placeholder="Enter your Password again" id="password" required>
+        <input type="password" placeholder="Enter your Password again" name="cpassword" required>
 
         <button>Sign Up</button>
     </form>
