--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -143,10 +143,10 @@ button{
         <h3>Login Here</h3>
 
         <label for="username">Username</label>
-        <input type="text" placeholder="Email or Phone" id="username">
+        <input type="text" placeholder="Email or Phone" name="username">
 
         <label for="password">Password</label>
-        <input type="password" placeholder="Password" id="password">
+        <input type="password" placeholder="Password" name="password">
 
         <button>Log In</button>
         <div class="social">
