completed tasks functionality

--- a/backend/FlowState/templates/index.html
+++ b/backend/FlowState/templates/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="{% static 'css/explore.css'%}">
     <link rel="stylesheet" href="{% static 'css/fixed.css'%}">
+    <link rel="stylesheet" href="{% static 'css/dropdown.css'%}">
 </head>
 <body>
     {% include 'navbar.html' %}
