--- a/backend/FlowState/templates/navbar.html
+++ b/backend/FlowState/templates/navbar.html
@@ -1,51 +1,5 @@
 {% load static %}
 
-<!-- <style>
-
-  
-    
-  .dropdown .dropbtn {
-    cursor: pointer;
-    font-size: 16px;  
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-  }
-  
-  /* .navbar a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
-    background-color: rgb(14, 4, 4);
-  } */
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-  
-  .dropdown-content a:hover {
-    background-color: #ddd;
-  }
-  
-  .show {
-    display: block;
-  }
-  </style> -->
 
 <header>
     <nav class="navbar">
@@ -53,23 +7,28 @@
         <div class="nav_user cc">
         {% if request.user.is_authenticated %}
             <div class="user_img"><img src="{% static 'images/user_image.png'%}" alt="" width="36px" height="36px"></div>
-                <div class="user">
-                    <a class="name" href="#">Prabhakar Mishra</a><br>
-                    <a class="user_name" href="#">{{user}}</a>
-                </div>
-
-                
+                <!-- <div class="user"> -->
+                    <!-- <a class="name" href="#"></a><br> -->
+                    <!-- <a class="user_name" href="#">{{user.username}}</a> -->
+                <!-- </div> -->
             
-            
-                <div class="dropdown">
+                <!-- <div class="dropdown">
                   <button class="dropbtn">
                     <div class="dropdown_icon"><i class="fa-solid fa-caret-down"></i></div>
                   </button>
                   <div class="dropdown-content">
                     <a href="/logout">Log Out</a>
                   </div>
-                </div>
-            
+                </div> -->
+                <div class="dropdown">
+                  <button class="dropbtn user user_name" onclick="myFunction()">{{user.username}}
+                    <i class="fa fa-caret-down"></i>
+                  </button>
+                  <div class="dropdown-content" id="myDropdown">
+                    <a href="#">Profile</a>
+                    <a href="{% url 'logout' %}">Logout</a>
+                  </div>
+                  </div> 
             
         {% else %}
             <a href="{% url 'login' %}" class="user">
@@ -80,3 +39,34 @@
         </div>
     </nav>
 </header>
+<!-- </head>
+<body> -->
+<!-- 
+<div class="navbar">
+  <a href="#home">Home</a>
+  <a href="#news">News</a>
+
+</div>
+
+<h3>Dropdown Menu inside a Navigation Bar</h3>
+<p>Click on the "Dropdown" link to see the dropdown menu.</p>
+
+</body>
+</html> -->
+<script>
+/* When the user clicks on the button, 
+toggle between hiding and showing the dropdown content */
+function myFunction() {
+  document.getElementById("myDropdown").classList.toggle("show");
+}
+
+// Close the dropdown if the user clicks outside of it
+window.onclick = function(e) {
+  if (!e.target.matches('.dropbtn')) {
+  var myDropdown = document.getElementById("myDropdown");
+    if (myDropdown.classList.contains('show')) {
+      myDropdown.classList.remove('show');
+    }
+  }
+}
+</script>
