--- a/backend/FlowState/templates/right_sidebar.html
+++ b/backend/FlowState/templates/right_sidebar.html
@@ -1,27 +1,18 @@
 <div class="right_sidebar">
     <div class="hots">
         <div class="hot_head">Trending Hots</div>
+        {%for i in hot_topics%}
         <div class="hot_container">
-            <a href="#">
+            <a href="{{i.url}}">
                 <div class="hot_content">
                 <!-- <div class="hot_title">Hot Title</div> -->
-                <div class="hot_lines">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit, molestiae.</div>
+                <div class="hot_lines">{{i.title}}</div>
                 </div>
             </a>
-            <a href="#">
-                <div class="hot_content">
-                <!-- <div class="hot_title">Hot Title</div> -->
-                <div class="hot_lines">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit, molestiae.</div>
-                </div>
-            </a>
-            <a href="#">
-                <div class="hot_content">
-                <!-- <div class="hot_title">Hot Title</div> -->
-                <div class="hot_lines">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit, molestiae.</div>
-                </div>
-            </a>
+            {%endfor%}
         </div>
     </div>
+    
     <hr id="right_sidebar_hr">
     <div class="blogs">
         <div class="blog_head">Blogs</div>
