--- a/backend/FlowState/static/css/fixed.css
+++ b/backend/FlowState/static/css/fixed.css
@@ -16,7 +16,7 @@ a{
 .navbar{
     z-index: 10;
     position: fixed;
-    background-color: #3F4156;
+    background-color: #0b0c10;
     display: grid;
     grid-template-columns: repeat(12,1fr);
     height: 70px;
@@ -60,9 +60,9 @@ a{
 
 /* left sidebar */
 .left_sidebar{
-    background-color:  #2f303f;
+    background-color:  #0b0c10;
     /* background-color:#3F4156; */
-    box-shadow: 0 0 10px -5px black;
+    /* box-shadow: 0 0 10px -5px black; */
     grid-column: 1/2;
     width: 16.5vw;
     height: 100%;
@@ -74,10 +74,10 @@ a{
     /* background-color: #4a4c64; */
     position: sticky;
     padding-block: 15px;
-    padding-left: 25px;
+    /* padding-left: 25px; */
     border-radius: 10px;
     /* margin-top: 10px; */
-    margin-left: 30px;
+    /* margin-left: 30px; */
 }
 .ls{
     cursor: pointer;
@@ -86,7 +86,7 @@ a{
     font-weight: 500;
     display: flex;
     align-items: center;
-    padding-left: 10px;
+    padding-left: 55px;
     border-radius: 8px;
     margin-block:17px ;
     /* margin-bottom: 18px; */
@@ -96,7 +96,7 @@ a{
     /* background-color:  #2f303f; */
 }
 .ls:hover{
-   /* background-color:  #63647d; */
+   background-color:  #1f2833;
    color: #03e9f4;
 }
 /* main */
@@ -104,22 +104,31 @@ a{
     height: 100%;
     padding-top: 30px;
     grid-column: 2/3;
-    background-color: #2f303f;
+    background-color: #0b0c10;
 }
 /* right sidebar */
 .right_sidebar{
     position: relative;
     padding-top: 30px;
     height: 100%;
-    padding-inline: 20px;
-    box-shadow: 0 0 10px -5px black;
-    background-color: #2f303f;
+    /* padding-inline: 20px; */
+    /* box-shadow: 0 0 10px -5px black; */
+    background-color: #0b0c10;
     /* background-color:#3F4156; */
     grid-column: 3/4;
 }
-/* .hots{
-    background-color: #12282e;
-} */
+.hots{
+    border-radius: 10px;
+    padding-inline: 15px;
+    padding-top:20px;
+    margin-right:15px;
+    /* border-radius: 10px;
+    margin-right: 15px;
+    padding-top:18px;
+    padding-inline: 20px;
+    margin-left: 0px; */
+    background-color: #131d28;
+}
 .hot_container{
     margin-top: 15px;
 }
@@ -145,7 +154,18 @@ a{
     margin-bottom: 15px;
     margin-left: 0px;
 }
-
+.blogs{
+    border-radius: 10px;
+    padding-inline: 15px;
+    padding-top:20px;
+    margin-right:15px;
+    /* border-radius: 10px;
+    margin-right: 15px;
+    padding-top:18px;
+    margin-left: 15px;
+    padding-inline: 20px; */
+    background-color: #131d28;
+}
 .blog_container{
     margin-top: 15px;
 }
