--- a/backend/FlowState/static/css/fixed.css
+++ b/backend/FlowState/static/css/fixed.css
@@ -14,6 +14,7 @@ a{
 }
 /* navbar */
 .navbar{
+    width: 100%;
     z-index: 10;
     position: fixed;
     background-color: #0b0c10;
@@ -23,16 +24,15 @@ a{
     box-shadow: 0 2px 10px -3px black;
 }
 .nav_logo{
-    grid-column: 1/2;
+    grid-column: 1/3;
     font-size: 20px;
-    margin-left: 60px;
+    /* margin-left: 60px; */
     font-weight: 700;
 }
 .nav_user{
     display: flex;
     grid-column: 11/13;
-    
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
 }
 .name{
     color: rgb(139, 139, 139);
