--- a/backend/FlowState/templates/community.html
+++ b/backend/FlowState/templates/community.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,35 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/fixed.css">
-    <link rel="stylesheet" href="/css/community.css">
+    <link rel="stylesheet" href="{% static 'css/explore.css'%}">
+    <link rel="stylesheet" href="{% static 'css/fixed.css'%}">
+    <link rel="stylesheet" href="{% static 'css/dropdown.css'%}">
+    <link rel="stylesheet" href="{% static 'css/community.css'%}">
+
 </head>
 <body>
-    <header>
-        <nav class="navbar">
-            <div class="nav_logo cc">Flowstate</div>
-            <div class="nav_user cc">
-                <div class="user_img"><img src="/images/user_image.png" alt="" width="36px" height="36px"></div>
-                    <div class="user">
-                        <a class="name" href="#">Prabhakar Mishra</a><br>
-                        <a class="user_name" href="#">@_p_mishra</a>
-                    </div>
-                <div class="dropdown_icon"><i class="fa-solid fa-caret-down"></i></div>
-            </div>
-        </nav>
-    </header>
+{% include 'navbar.html'%}
+
     <div class="container">
-        <div class="left_sidebar">
-            <div class="ls_container">
-                <a href="#"><div class="profile_ls ls">Profile</div></a>
-                <a href="/templates/explore.html"><div class="explore_ls ls">Explore</div></a>
-                <a href="/templates/community.html"><div class="community_ls ls">Community</div></a>
-                <a href="/templates/task.html"><div class="task_ls ls">Task</div></a>
-                <a href="#"><div class="notification_ls ls">Notifications</div></a>
-                <a href="#"><div class="saved_ls ls">Saved</div></a>
-                <a href="#"><div class="doubt_ls ls">Doubts</div></a>   
-            </div>
-        </div>
+        {% include 'left_sidebar.html'%}
+
         <div class="main">
             <div class="create_post_container">
                 <div class="post_caption">
@@ -72,58 +56,8 @@
                 </div>
             </div>
         </div>
-        <div class="right_sidebar">
-            <div class="hots">
-                <div class="hot_head">Trending Hots</div>
-                <div class="hot_container">
-                    <a href="#">
-                        <div class="hot_content">
-                        <!-- <div class="hot_title">Hot Title</div> -->
-                        <div class="hot_lines">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit, molestiae.</div>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="hot_content">
-                        <!-- <div class="hot_title">Hot Title</div> -->
-                        <div class="hot_lines">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit, molestiae.</div>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="hot_content">
-                        <!-- <div class="hot_title">Hot Title</div> -->
-                        <div class="hot_lines">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit, molestiae.</div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <hr id="right_sidebar_hr">
-            <div class="blogs">
-                <div class="blog_head">Blogs</div>
-                <div class="blog_container">
-                    <a href="#">
-                        <div class="blog_content">
-                        <div class="blog_title">Blog Title</div>
-                        <div class="site_name">www.geeksforgeeks.com</div>
-                        <div class="blog_desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam assumenda tenetur vel corporis natus veritatis labore repellendus, maxime consequuntur culpa?</div>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="blog_content">
-                        <div class="blog_title">Blog Title</div>
-                        <div class="site_name">www.geeksforgeeks.com</div>
-                        <div class="blog_desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam assumenda tenetur vel corporis natus veritatis labore repellendus, maxime consequuntur culpa?</div>
-                        </div>
-                    </a>
-                    <a href="#">
-                        <div class="blog_content">
-                        <div class="blog_title">Blog Title</div>
-                        <div class="site_name">www.geeksforgeeks.com</div>
-                        <div class="blog_desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam assumenda tenetur vel corporis natus veritatis labore repellendus, maxime consequuntur culpa?</div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </div>
+        {% include 'right_sidebar.html'%}
+
     </div>
 </body>
 
