--- a/backend/FlowState/templates/left_sidebar.html
+++ b/backend/FlowState/templates/left_sidebar.html
@@ -2,7 +2,7 @@
 <div class="left_sidebar">
     <div class="ls_container">
         <a href="{% url 'home' %}"><div class="explore_ls ls">Explore</div></a>
-        <a href="/templates/community.html"><div class="community_ls ls">Community</div></a>
+        <a href="{% url 'community' %}"><div class="community_ls ls">Community</div></a>
         <a href="{% url 'task' %}"><div class="task_ls ls">Task</div></a>
         <a href="#"><div class="profile_ls ls">Profile</div></a>
         <!-- <a href="#"><div class="notification_ls ls">Notifications</div></a>
