--- a/backend/FlowState/templates/community.html
+++ b/backend/FlowState/templates/community.html
@@ -18,32 +18,36 @@
     <div class="container">
         {% include 'left_sidebar.html'%}
 
-        <div class="main">
-            <div class="create_post_container">
-                <div class="post_caption">
-                    <div class="posted_user_profile_pic"><img src="/images/user_image.png" alt=""></div>
-                    <input type="text" placeholder="What is happening ?">
-                </div>
-                <div class="image_post">
-                    <div class="add_image">
-                        <button><i class="fa-solid fa-image" style="width: 30px;color: rgb(128, 235, 235);font-size: 17px;"></i>  Photo</button>
-                        <button><i class="fa-solid fa-play-circle" style="width: 30px;color: green;font-size: 17px;"></i>  Video</button>
-                        <div class="post_button">Post</div>
-                    </div>
-                    <!-- <div class="post_button"><button>Post</button></div> -->
-                </div>
+            <div class="main">
+                <div class="create_post_container">
+                    <form method="POST">
+                        {% csrf_token %}
+                        <div class="post_caption">
+                            <div class="posted_user_profile_pic"><img src="/images/user_image.png" alt=""></div>
+                            <input type="text" name="body" placeholder="What is happening ?">
+                        </div>
+                        <div class="image_post">
+                            <div class="add_image">
+                                <button><i class="fa-solid fa-image" style="width: 30px;color: rgb(128, 235, 235);font-size: 17px;"></i>  Photo</button>
+                                <button><i class="fa-solid fa-play-circle" style="width: 30px;color: green;font-size: 17px;"></i>  Video</button>
+                                <button type="submit" class="post_button">Post</button>
+                            </div>
+                            <!-- <div class="post_button"><button>Post</button></div> -->
+                        </div>
+                    </form>
             </div>
             <div class="posted_container">
+                {% for post in posts %}
                 <div class="posted_box">
                     <div class="posted_profile_data">
                         <div class="posted_user_profile_pic"><img src="{% static 'images/user_image.png'%}" alt=""></div>
                         <div class="posted_username">
-                            <h4 class="posted_username">Prabhakar Mishra</h4>
-                            <p class="user_about">Web Developer, AR/VR, Backend Dev...</p>
-                            <p class="user_about">5h</p>
+                            <h4 class="posted_username">{{post.user.first_name}}</h4>
+                            <!-- <p class="user_about">Web Developer, AR/VR, Backend Dev...</p> -->
+                            <p class="user_about">{{post.created_at|timesince}} ago</p>
                         </div>
                     </div>
-                    <div class="posted_caption">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam repellendus minima similique ad officiis enim doloribus error quisquam suscipit iure.</div>
+                    <div class="posted_caption">{{post.body}}</div>
                     <!-- <div class="posted_image"><img src="/images/user_image.png" alt=""></div> -->
 
                     <div class="posted_actions">
@@ -52,6 +56,7 @@
                         <div class="actions"><i class="fa-solid fa-share" style="width: 20px;font-size: 17px;"></i> Share</div>   
                     </div>
                 </div>
+                {% endfor %}
             </div>
         </div>
         {% include 'right_sidebar.html'%}
