--- a/backend/FlowState/static/css/fixed.css
+++ b/backend/FlowState/static/css/fixed.css
@@ -154,7 +154,7 @@ a{
     margin-bottom: 15px;
     margin-left: 0px;
 }
-.blogs{
+ .blogs{margin-top: 20px;
     border-radius: 10px;
     padding-inline: 15px;
     padding-top:20px;
