--- a/backend/FlowState/templates/right_sidebar.html
+++ b/backend/FlowState/templates/right_sidebar.html
@@ -13,7 +13,7 @@
         </div>
     </div>
 
-    <hr id="right_sidebar_hr">
+    <!-- <hr id="right_sidebar_hr"> -->
     <div class="blogs">
         <div class="blog_head">Blogs</div>
         {%for i in blogs%}
